--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
   <title>Alejandro Reyes | Home</title>
-  <link href="main.css" rel="stylesheet" />
+  <link href="main.css" rel="stylesheet" >
 </head>
 <body>
   <h1>Alejandro Reyes</h1>
