--- a/School.html
+++ b/School.html
@@ -23,7 +23,7 @@
   <p>I was born and raised in Compton California, and honestly, I just went with the flow. I previously went to school at Emerson Elementary, transitioned into Roosevelt Middle School, and then finally Dominguez High School. I began to take school seriously during high school. I strived for good grades but had no idea what I wanted to do as a career path. Through the years I found interests in computers, music, and creative writing. </p>
 </section>
 <section id="rightColumn" style="background-color: lavenderblush">
-  <h3><img src="Dale_Donut_files/Dale_Donut.jpg" alt="Dale's Donuts" ></h3>
+  <h3><img src="Dale_Donut.jpg" alt="Dale's Donuts" ></h3>
 </section>
 </div>
     
